force-app/main/default/objects/Manage_Of_Change__c/Manage_Of_Change__c.object-meta.xml
<CustomObject>
    <label>MOC/Action Items</label>
    <nameField>
        <displayFormat>MOC-{000}</displayFormat>
        <label>MOC #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MOC/Action Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>