force-app/main/default/objects/Manage_Of_Change__c/fields/Acceptance_Document_Required__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Document_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acceptance Document Required</label>
    <type>Checkbox</type>
</CustomField>