force-app/main/default/objects/Manage_Of_Change__c/fields/Action_Item__c.field-meta.xml
<CustomField>
    <fullName>Action_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Item #</label>
    <referenceTo>Actions_OLD__c</referenceTo>
    <relationshipName>Manage_Of_Change</relationshipName>
    <type>Lookup</type>
</CustomField>