force-app/main/default/objects/Manage_Of_Change__c/fields/Action_Progress__c.field-meta.xml
<CustomField>
    <fullName>Action_Progress__c</fullName>
    <inlineHelpText>Ongoing notes should be made in this section to provide information on the progress of the action</inlineHelpText>
    <label>Action Progress</label>
    <type>TextArea</type>
</CustomField>