force-app/main/default/objects/Manage_Of_Change__c/fields/BMS_Action_Details__c.field-meta.xml
<CustomField>
    <fullName>BMS_Action_Details__c</fullName>
    <description>Details of the BMS Action selected.</description>
    <inlineHelpText>Details of the BMS Action selected.</inlineHelpText>
    <label>BMS Action Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>