force-app/main/default/objects/Manage_Of_Change__c/fields/BMS_Actions__c.field-meta.xml
<CustomField>
    <fullName>BMS_Actions__c</fullName>
    <description>Business Management System actions, for document control, registers, matrixes or workflows.</description>
    <label>BMS Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>SOP</fullName>
            </value>
            <value>
                <fullName>Guidelines</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Matrix</fullName>
            </value>
            <value>
                <fullName>Register</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>