force-app/main/default/objects/Manage_Of_Change__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Delay - Decision Pending</fullName>
            </value>
            <value>
                <fullName>Required - Unit Stacked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>