force-app/main/default/objects/Manage_Of_Change__c/fields/Closure_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Target_Date__c</fullName>
    <label>Closure Target Date</label>
    <type>Date</type>
</CustomField>