force-app/main/default/objects/Manage_Of_Change__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <inlineHelpText>Actual date the action item was completed.  May be different from Target date</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>