force-app/main/default/objects/Manage_Of_Change__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <inlineHelpText>Date that record was actually created</inlineHelpText>
    <label>Date Created</label>
    <required>true</required>
    <type>Date</type>
</CustomField>