force-app/main/default/objects/Manage_Of_Change__c/fields/Description_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Change__c</fullName>
    <inlineHelpText>Provide detailed Information about the physical change that is required</inlineHelpText>
    <label>Description of Change</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>