force-app/main/default/objects/Manage_Of_Change__c/fields/Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>Final_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Manage_Of_Change</relationshipName>
    <type>Lookup</type>
</CustomField>