force-app/main/default/objects/Manage_Of_Change__c/fields/Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Managed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MOC_Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>