force-app/main/default/objects/Manage_Of_Change__c/fields/QA_Source_number__c.field-meta.xml
<CustomField>
    <fullName>QA_Source_number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Source</label>
    <referenceTo>QA__c</referenceTo>
    <relationshipName>Action_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>