force-app/main/default/objects/Manage_Of_Change__c/fields/Reason_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Change__c</fullName>
    <inlineHelpText>Provide Detailed Information as to why this Change is being requested</inlineHelpText>
    <label>Reason for Change</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>