force-app/main/default/objects/Manage_Of_Change__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <inlineHelpText>Explanation of the action/tasks that will be needed to make this change</inlineHelpText>
    <label>Recommended Action</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>