force-app/main/default/objects/Manage_Of_Change__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Person who is assigned by the creator to ensure that the task is completed satisfactorily</inlineHelpText>
    <label>Requested By</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>MOC/Action Items (Responsible Person)</relationshipLabel>
    <relationshipName>Manage_Of_Change1</relationshipName>
    <type>Lookup</type>
</CustomField>