force-app/main/default/objects/Manage_Of_Change__c/fields/Risk_Assessment_Required__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Required__c</fullName>
    <label>Risk Assessment Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>