force-app/main/default/objects/Manage_Of_Change__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>The source/reason of where the idea for the change was orginated</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Field Visit - Management</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Audit - External</fullName>
            </value>
            <value>
                <fullName>Audit - Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>