force-app/main/default/objects/Manage_Of_Change__c/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The record from which the MOC orginated</inlineHelpText>
    <label>Source ID#</label>
    <referenceTo>HSEQ_Forms__c</referenceTo>
    <relationshipName>Manage_Of_Change</relationshipName>
    <type>Lookup</type>
</CustomField>