force-app/main/default/objects/Manage_Of_Change__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <inlineHelpText>Date that the Action Item must be closed by</inlineHelpText>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>