force-app/main/default/objects/Manage_Of_Change__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modify Existing Form</fullName>
            </value>
            <value>
                <fullName>Create New Form</fullName>
            </value>
            <value>
                <fullName>Modify Procedure</fullName>
            </value>
            <value>
                <fullName>Create New Procedure</fullName>
            </value>
            <value>
                <fullName>Equipment Modification</fullName>
            </value>
            <value>
                <fullName>New Equipment Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>