force-app/main/default/objects/Manage_Of_Change__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Manage_Of_Change</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>