force-app/main/default/objects/Manage_Of_Change__c/recordTypes/Approved.recordType-meta.xml
<RecordType>
    <fullName>Approved</fullName>
    <active>true</active>
    <label>Approved</label>
</RecordType>