force-app/main/default/objects/Manage_Of_Change__c/recordTypes/Equip_Doc.recordType-meta.xml
<RecordType>
    <fullName>Equip_Doc</fullName>
    <active>false</active>
    <label>Equipment &amp; Doc</label>
</RecordType>