force-app/main/default/objects/Manage_Of_Change__c/recordTypes/Preapproval.recordType-meta.xml
<RecordType>
    <fullName>Preapproval</fullName>
    <active>true</active>
    <label>Preapproval</label>
</RecordType>