force-app/main/default/objects/Manage_Of_Change__c/listViews/All_2023.listView-meta.xml
<ListView>
    <fullName>All_2023</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Date_Created__c</columns>
    <columns>Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Description_of_Change__c</columns>
    <columns>Reason_for_Change__c</columns>
    <columns>Recommended_Action__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Managed_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Manage_Of_Change__c.Preapproval</value>
    </filters>
    <label>MOC Not Approved</label>
    <sharedTo>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Safety</group>
        <role>Business_Manager</role>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>